# ai-operators

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.template  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml
agent/: values.yaml
agent/templates/: agent-config-configmap.yaml  deployment.yaml  instruction-configmap.yaml  pipeline-configmap.yaml  role.yaml  rolebinding.yaml  service-account.yaml  service.yaml
chart/: Chart.yaml  values.yaml
chart/crds/: agent-crd.yaml  crd.yaml
chart/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
chart/templates/crds/: agent-crd.yaml
chart/templates/kb-operator/: clusterrole.yaml
dependencies/: requirements.txt
src/agent_operator/: constants.py  main.py  resource.py
src/agent_operator/handlers/: __init__.py  agent_handler.py
src/agent_operator/services/: agent_data.py  argocd_templates.py  helm_utils.py  k8s.py  (+2 more)
src/ml_operator/: constants.py  converter.py  handler.py  main.py  resource.py
tests/: common.py  conftest.py  sample-spec.yaml  test_converter.py  test_main.py  test_pipelines.py
tests/agent_operator/: conftest.py  test_main.py
tests/handlers/: test_knowledge_base_handler.py
tests/kb_operator/: conftest.py  test_main.py  test_pipelines.py
tests/ml_operator/: conftest.py  test_main.py  test_pipelines.py
tests/resources/: agent-cr.yaml  agent-crd.yaml  cr.yaml  kb-crd.yaml  test-pipeline.py  upload_pipeline.py
tests/services/: test_kubeflow_pipelines_service.py
(+40 files in other folders)
