[project]
name = "ml-operator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cattrs>=25.2.0",
    "kopf[uvloop]>=1.38.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[tool.poe.tasks]
test = "pytest tests/"
lint = "ruff check ."
format = "ruff format ."
export-deps = "uv export --format requirements.txt -o dependencies/requirements.txt --no-dev"
dev = "kopf run -A src/operator/main.py --verbose --dev"
